# javapyn

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: bench_huge_data.py  bench_parse_only.py  fetch_sample.py
src/: arrow_decoder.rs  decoder.rs  lib.rs  py_decoder.rs  py_decoder_fast.rs  reader.rs  stream_decoder.rs  value.rs
src/javapyn/: __init__.py  _core.pyi  py.typed
tests/: javabin_ref_encoder.py  test_arrow.py  test_decoder.py  test_live_fixtures.py
tests/fixtures/: solr_movies_all_fields.json  solr_movies_deterministic.json  solr_movies_export.json  solr_movies_sample.json  solr_movies_stream.json  solr_reviewers_all_fields.json  solr_studios_all_fields.json
