[package]
name = "javapyn"
version = "0.1.0"
edition = "2024"
license = "ISC"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
# abi3-py310: build against Python's stable ABI, floor Python 3.10 (matching
# project.requires-python in pyproject.toml). This means a single wheel per
# platform/architecture works on every CPython 3.10+ at runtime, regardless
# of which interpreter built it -- no need to build (or CI-matrix) one wheel
# per Python minor version. The tradeoff: code cannot use any part of the
# regular (non-limited) C API. In particular, py_decoder_fast.rs's FFI fast
# path deliberately uses `PyList_SetItem` rather than the `PyList_SET_ITEM`
# macro, which isn't available under the limited API (see that module's docs
# for details).
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
serde_json = "1"
thiserror = "2"
arrow = { version = "59", default-features = false, features = ["pyarrow"] }

[dev-dependencies]
pyo3 = { version = "0.29.0", features = ["auto-initialize"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
